--- a/index.html
+++ b/index.html
@@ -80,19 +80,19 @@
 
         <div class="col-lg-4 col-md-4 col-sm-12">
             <h3 class="feature-title">Discover the Woods</h3>
-            <img src="images/1.jpg" class="img-fluid">
+            <img src="1.jpg" class="img-fluid">
             <p class="short-desc">Step beyond the familiar and into nature’s embrace. Our guided forest journeys lead you through whispering trees and secret paths, where every step reveals a story and every breath renews the soul.</p>
         </div>
 
         <div class="col-lg-4 col-md-4 col-sm-12">
             <h3 class="feature-title">Secrets of the Forest</h3>
-            <img src="images/2.jpg" class="img-fluid">
+            <img src="2.jpg" class="img-fluid">
             <p class="short-desc">Unearth the hidden wonders tucked beneath ancient branches. From delicate wildflowers to elusive wildlife, every moment in the woods is a chance to discover nature’s quiet magic.</p>
         </div>
 
         <div class="col-lg-4 col-md-4 col-sm-12">
             <h3 class="feature-title">Wildlife Encounters</h3>
-            <img src="images/3.jpg" class="img-fluid">
+            <img src="3.jpg" class="img-fluid">
             <p class="short-desc">Witness the woodland’s secret inhabitants in their natural home. From curious deer to shimmering dragonflies, each encounter connects you more deeply to the pulse of the forest.</p>
         </div>
 
@@ -169,3 +169,4 @@
 
 </body>
 </html>
+
